# matrust

./: Cargo.toml  README.md
matrust/: Cargo.toml  build.rs
matrust/src/: main.rs
matrust/ui/: chat.slint  chat_window.slint  logic.slint  login_window.slint  main_window.slint  users.slint
src/: main.rs
ui/: chat.slint  chat_types.slint  logic.slint
