[workspace]
members = ["matrust", 'matrix-rust-sdk/crates/matrix-sdk']

[workspace.package]
rust-version = "1.76"

[workspace.dependencies]
anyhow = "1.0.68"
aquamarine = "0.6.0"
assert-json-diff = "2"
assert_matches = "1.5.0"
assert_matches2 = "0.1.1"
async-rx = "0.1.3"
async-stream = "0.3.3"
async-trait = "0.1.60"
as_variant = "1.2.0"
base64 = "0.22.0"
byteorder = "1.4.3"
eyeball = { version = "0.8.8", features = ["tracing"] }
eyeball-im = { version = "0.5.1", features = ["tracing"] }
eyeball-im-util = "0.7.0"
futures-core = "0.3.28"
futures-executor = "0.3.21"
futures-util = "0.3.26"
growable-bloom-filter = "2.1.0"
http = "1.1.0"
imbl = "3.0.0"
itertools = "0.12.0"
once_cell = "1.16.0"
pin-project-lite = "0.2.9"
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false }
ruma = { version = "0.11.1", features = [
    "client-api-c",
    "compat-upload-signatures",
    "compat-user-id",
    "compat-arbitrary-length-ids",
    "compat-tag-info",
    "compat-encrypted-stickers",
    "unstable-msc3401",
    "unstable-msc3266",
    "unstable-msc3488",
    "unstable-msc3489",
    "unstable-msc4075",
    "unstable-msc4140",
] }
ruma-common = "0.14.1"
serde = "1.0.151"
serde_html_form = "0.2.0"
serde_json = "1.0.91"
sha2 = "0.10.8"
similar-asserts = "1.5.0"
stream_assert = "0.1.1"
thiserror = "1.0.38"
tokio = { version = "1.39.1", default-features = false, features = ["sync"] }
tokio-stream = "0.1.14"
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-core = "0.1.32"
tracing-subscriber = "0.3.18"
uniffi = { version = "0.28.0" }
uniffi_bindgen = { version = "0.28.0" }
url = "2.5.0"
vodozemac = { version = "0.8.0", features = ["insecure-pk-encryption"] }
wiremock = "0.6.0"
zeroize = "1.6.0"

matrix-sdk = { path = "matrix-rust-sdk/crates/matrix-sdk", version = "0.8.0", default-features = false }
matrix-sdk-base = { path = "matrix-rust-sdk/crates/matrix-sdk-base", version = "0.8.0" }
matrix-sdk-common = { path = "matrix-rust-sdk/crates/matrix-sdk-common", version = "0.8.0" }
matrix-sdk-crypto = { path = "matrix-rust-sdk/crates/matrix-sdk-crypto", version = "0.8.0" }
matrix-sdk-ffi-macros = { path = "matrix-rust-sdk/bindings/matrix-sdk-ffi-macros", version = "0.7.0" }
matrix-sdk-indexeddb = { path = "matrix-rust-sdk/crates/matrix-sdk-indexeddb", version = "0.8.0", default-features = false }
matrix-sdk-qrcode = { path = "matrix-rust-sdk/crates/matrix-sdk-qrcode", version = "0.8.0" }
matrix-sdk-sqlite = { path = "matrix-rust-sdk/crates/matrix-sdk-sqlite", version = "0.8.0", default-features = false }
matrix-sdk-store-encryption = { path = "matrix-rust-sdk/crates/matrix-sdk-store-encryption", version = "0.8.0" }
matrix-sdk-test = { path = "matrix-rust-sdk/testing/matrix-sdk-test", version = "0.7.0" }
matrix-sdk-ui = { path = "matrix-rust-sdk/crates/matrix-sdk-ui", version = "0.8.0", default-features = false }


[workspace.lints.rust]
rust_2018_idioms = "warn"
semicolon_in_expressions_from_macros = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"


[workspace.lints.clippy]
assigning_clones = "allow"
box_default = "allow"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
mut_mut = "warn"
needless_borrow = "warn"
nonstandard_macro_braces = "warn"
str_to_string = "warn"
todo = "warn"
unused_async = "warn"
redundant_clone = "warn"
