[package]
name = "matrust"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = "0.11.0"
matrix-sdk-ui = "0.11.0"
slint = "1.11.0"
tokio = { version = "1.45.1", features = ["full"] }
async-compat = "0.2.4"
once_cell = "1.8"
lazy_static = "1.4.0"
anyhow = "1.0.98"
url = "2.5.4"

[build-dependencies]
slint-build = "1.9.2"
